add loop to workers

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,25 +1,36 @@
 default: &default
   runner:
-    instances: 4
+    instances: 1
     input_queue: "svp_tariff"
     output_queue: "svp_bk"
-  database:
-    adapter: postgresql
-    encoding: utf8
+
+default_database: &default_database
+  adapter: postgresql
+  encoding: utf8
 
 development:
   <<: *default
 
   database:
-    host: localhost
+    <<: *default_database
 
+    host: localhost
     port: 5432
     database: svpdb1
     username: test_usr_dev1
     password: test_usr_dev1
 
+  
+
 test:
   <<: *default
 
+  database:
+    <<: *default_database
+
+
 production:
   <<: *default
+
+  database:
+    <<: *default_database
