--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,8 @@
 default: &default
   runner:
     instances: 1
-    input_queue: "svp_tariff"
-    output_queue: "svp_bk"
+    input_queue: "svp_billing"
+    output_queue: "svp_book_keeper"
 
 default_database: &default_database
   adapter: postgresql
