--- a/config/config.yml
+++ b/config/config.yml
@@ -32,6 +32,11 @@ development:
     user: 'guest'
     password: 'guest'
 
+  redis_alarm:
+    host: localhost
+    port: 6379
+    db: "svp:alarm"
+
 test:
   <<: *default
 
@@ -59,3 +64,8 @@ production:
     host: '172.17.10.26'  
     user: 'svp_app'
     password: 'svp_app'
+
+  redis_alarm:
+    host: 172.17.10.21
+    port: 6379
+    db: "svp:alarm"
