--- a/config/config.yml
+++ b/config/config.yml
@@ -74,7 +74,7 @@ production:
   redis_alarm:
     host: 172.17.10.21
     port: 6379
-    db: "svp:alarm"
+    prefix: svp_alarm
 
   redis_cache:
     host: 172.17.10.27
